added redirects KV parsing and redirect support

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -49,6 +49,10 @@ id = "dab58d6840824f3bacccc315a50d3651"
 binding = "SITE_CONTRACT"
 id = "0a2dc5df8dda441aa9a7b47a09411001"
 
+[[kv_namespaces]]
+binding = "REDIRECTS"
+id = "5a55237f2b0646599e637edb8f4154c7"
+
 # Bind the Workers AI model catalog. Run machine learning models, powered by serverless GPUs, on Cloudflare’s global network
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#workers-ai
 # [ai]
