Website worker checks for cloudflare proxy first

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -28,6 +28,7 @@ PINATA_GATEWAY = "cdn.orbiter.host"
 CHANNEL_ID = "C086DDCVA5R"
 DISPATCH_NAMESPACE_NAME = "staging-functions"
 CLOUDFLARE_ACCOUNT_ID = "255e21419f5795400879e86a02167322"
+CLOUDFLARE_ZONE_ID = "your-zone-id"
 
 # Bind a KV Namespace. Use KV as persistent storage for small key-value pairs.
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#kv-namespaces
@@ -58,6 +59,14 @@ id = "5a55237f2b0646599e637edb8f4154c7"
 [[kv_namespaces]]
 binding = "FUNCTIONS"
 id = "fdf47ff1bd0442b99bd79d849f7d1824"
+
+[[kv_namespaces]]
+binding = "LEGACY_DOMAINS"
+id = "7640af0ecc804a3e8027bcb90d50fb11"
+
+[[kv_namespaces]]
+binding = "CUSTOM_DOMAINS"
+id = "300c6ae6ef134f1b85b03cb2c2dd8dd1"
 
 # Bind the Workers AI model catalog. Run machine learning models, powered by serverless GPUs, on Cloudflare’s global network
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#workers-ai
